--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   tunnel:
     container_name: cloudflared-tunnel
@@ -6,7 +5,7 @@ services:
     restart: always
     command: tunnel run
     environment:
-      - TUNNEL_TOKEN=${cf_tunnel_token}
+      - TUNNEL_TOKEN=/run/secrets/cf_tunnel_token
     networks:
       - cftunnel-transport
 
