--- a/heimdall/docker-compose.yml
+++ b/heimdall/docker-compose.yml
@@ -14,11 +14,11 @@ services:
       - 443:443
     labels:
       - traefik.enable=true
-      - traefik.http.routers.whoami.rule=Host(`hd.janschaeffer.dev`)
-      - traefik.http.routers.whoami.entrypoints=websecure
-      - traefik.http.routers.whoami.tls=true
-      - traefik.http.routers.whoami.service=whoami
-      - traefik.http.services.whoami.loadbalancer.server.port=80
+      - traefik.http.routers.heimdall.rule=Host(`hd.janschaeffer.dev`)
+      - traefik.http.routers.heimdall.entrypoints=websecure
+      - traefik.http.routers.heimdall.tls=true
+      - traefik.http.routers.heimdall.service=heimdall
+      - traefik.http.services.heimdall.loadbalancer.server.port=80
     networks:
       - cloudflaretunnel
 
