--- a/jellyfin/docker-compose.yml
+++ b/jellyfin/docker-compose.yml
@@ -24,11 +24,11 @@ services:
       - 1900:1900/udp #optional
     labels:
       - traefik.enable=true
-      - traefik.http.routers.whoami.rule=Host(`jf.janschaeffer.dev`)
-      - traefik.http.routers.whoami.entrypoints=websecure
-      - traefik.http.routers.whoami.tls=true
-      - traefik.http.routers.whoami.service=whoami
-      - traefik.http.services.whoami.loadbalancer.server.port=80
+      - traefik.http.routers.jellyfin.rule=Host(`jf.janschaeffer.dev`)
+      - traefik.http.routers.jellyfin.entrypoints=websecure
+      - traefik.http.routers.jellyfin.tls=true
+      - traefik.http.routers.jellyfin.service=jellyfin
+      - traefik.http.services.jellyfin.loadbalancer.server.port=80
     networks:
       - cloudflaretunnel
 
